# CPP-Test

./: .gitignore  CMakeLists.txt  teachstack.json
modules/Number/step1_mynumber/: CMakeLists.txt
modules/Number/step1_mynumber/exercise/: main.cpp
modules/Number/step1_mynumber/instructions/: instruction.md
modules/Number/step1_mynumber/tests/: tests.cpp
modules/Number/step2_destructor/: CMakeLists.txt
modules/Number/step2_destructor/exercise/: main.cpp
modules/Number/step2_destructor/instructions/: instruction.md
modules/Number/step2_destructor/tests/: tests.cpp
modules/Number/step3_assignment/: CMakeLists.txt
modules/Number/step3_assignment/exercise/: main.cpp
modules/Number/step3_assignment/instructions/: instruction.md
modules/Number/step3_assignment/tests/: tests.cpp
modules/Number/step4_plus_operator/: CMakeLists.txt
modules/Number/step4_plus_operator/exercise/: main.cpp
modules/Number/step4_plus_operator/instructions/: instruction.md
modules/Number/step4_plus_operator/tests/: tests.cpp
modules/Number/step5_efficiency/: CMakeLists.txt
modules/Number/step5_efficiency/exercise/: main.cpp
modules/Number/step5_efficiency/instructions/: instruction.md
modules/Number/step5_efficiency/tests/: tests.cpp
modules/Number/step6_type_conversion/: CMakeLists.txt
modules/Number/step6_type_conversion/exercise/: main.cpp
modules/Number/step6_type_conversion/instructions/: instruction.md
modules/Number/step6_type_conversion/tests/: tests.cpp
